@@ -62,6 +62,10 @@ public:
 	    Sample & residual);
 
   /** Algorithm accessor */
+  OptimizationAlgorithm getOptimizationAlgorithm() const;
+  void setOptimizationAlgorithm(const OptimizationAlgorithm & algorithm);
+
+  /** @deprecated */
   OptimizationAlgorithm getAlgorithm() const;
   void setAlgorithm(const OptimizationAlgorithm & algorithm);
 
