@@ -43,7 +43,7 @@ for bootstrapSize in bootstrapSizes:
     algo.run()
     # To avoid discrepance between the plaforms with or without CMinpack
     print("result   (Auto)=", algo.getResult().getParameterMAP())
-    algo.setAlgorithm(ot.MultiStart(ot.TNC(), ot.LowDiscrepancyExperiment(ot.SobolSequence(), ot.Normal(candidate, ot.CovarianceMatrix(ot.Point(candidate).getDimension())), ot.ResourceMap.GetAsUnsignedInteger("GaussianNonLinearCalibration-MultiStartSize")).generate()))
+    algo.setOptimizationAlgorithm(ot.MultiStart(ot.TNC(), ot.LowDiscrepancyExperiment(ot.SobolSequence(), ot.Normal(candidate, ot.CovarianceMatrix(ot.Point(candidate).getDimension())), ot.ResourceMap.GetAsUnsignedInteger("GaussianNonLinearCalibration-MultiStartSize")).generate()))
     algo.run()
     # To avoid discrepance between the plaforms with or without CMinpack
     print("result    (TNC)=", algo.getResult().getParameterMAP())
